# C-Virtual-machine

./: CMakeLists.txt  FileReader.cpp  FileReader.h  LICENSE  Processor.cpp  Processor.h  Stack.cpp  Stack.h  Variable.cpp  Variable.h  Variables.cpp  Variables.h  Word.cpp  Word.h  main.cpp
Workers/: Declarator.cpp  Declarator.h  IntegerAdder.cpp  IntegerAdder.h  IntegerMultiplier.cpp  IntegerMultiplier.h  IntegerPusher.cpp  IntegerPusher.h  NumberLoader.cpp  NumberLoader.h  StringLoader.cpp  StringLoader.h  ValueMover.cpp  ValueMover.h  VariableDisplayer.cpp  VariableDisplayer.h  VariablePopper.cpp  VariablePopper.h  VariablePusher.cpp  VariablePusher.h
